Make it clear that its a test site for cats

--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Upside down cat eyes</h1>
-
+<p class="notice">This is a test site for <a href="http://www.sharedworkforce.com">Shared Workforce</a></p>
 <p><%= link_to 'New cat', new_cat_path %></p>
 
 <div>
