Use image url for rejected cats

--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -14,7 +14,7 @@
 <div>
   <% @cats.rejected.each do |cat| %>
     <%= link_to cat do %>
-      <%= image_tag(cat.cropped_image_url) %>
+      <%= image_tag(cat.image_url) %>
     <% end %>
   <% end %>
   <% if @cats.rejected.empty? %>
