--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -25,6 +25,11 @@
     <%= f.text_area :description, :rows=>4 %>
   </div>
 
+  <div class="field">
+    <%= f.label :notification_email, "Email address: (optional, it will take a few minutes for your cat to be processed. If you would like an email summary when it's complete, enter your email.)" %><br />
+    <%= f.text_field :notification_email %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
