--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :description, "Roughly descibe a cat in a few words (e.g. four legs, tail, fluffy)" %><br />
+    <%= f.label :description, "Roughly describe a cat in a few words (e.g. four legs, tail, fluffy)" %><br />
     <%= f.text_area :description, :rows=>4 %>
   </div>
 
