--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Upside down cat eyes</h1>
-<p class="notice">This is a live sandbox test site for <a href="http://www.sharedworkforce.com">Shared Workforce</a>. Please give it a try!</p>
-<p><%= link_to 'New cat', new_cat_path %></p>
+<p class="notice">This is a live sandbox test site for <a href="http://www.sharedworkforce.com">Shared Workforce</a>.</p>
+
+<p>Please give it a try by <%= link_to 'adding a new cat', new_cat_path %></p>
 
 <div>
   <% @cats.finished.each do |cat| %>
