--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,8 +1,4 @@
-<h1>Upside down cat eyes</h1>
-<p class="notice">This is a live sandbox test site for <a href="http://www.sharedworkforce.com">Shared Workforce</a>.</p>
-
-<p>Please give it a try by <%= link_to 'adding a new cat', new_cat_path %>.</p>
-
+<h2>Approved cats</h2>
 <div>
   <% @cats.finished.each do |cat| %>
     <%= link_to cat do %>
