Link to demo app source code / replacing link to the Ruby gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
       <h2>What is this?</h2>
       <p>This is a live sandbox demo for <%= link_to 'Shared Workforce', 'http://www.sharedworkforce.com' %>.</p>        
       <p>Shared Workforce is a platform for managing and completing repetitive tasks that require human intelligence. For example, tagging photos, approving text and answering simple questions.</p>
-      <h3><%= link_to 'Get the Heroku Addon', 'https://addons.heroku.com/sharedworkforce' %></h3>
-      <h3><%= link_to 'Get the Rails Gem', 'https://github.com/sharedworkforce/sharedworkforce' %></h3>
+      
+      <h3><p>You can view and download <a href="https://github.com/sharedworkforce/sharedworkforce-demo-rails">the source code for this app on github</a>.</p></h3>
     </div>
   </div>
 </div>
