Add custom styles to twitter bootstrap

--- a/app/assets/stylesheets/twitter/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/twitter/bootstrap_and_overrides.css.less
@@ -32,11 +32,35 @@ body {
 // Example:
 // @linkColor: #ff0000;
 
-.navbar .brand {
-	font-weight: 800;
-	color: white;
-}
+@navbarLinkColor: #ffffff;
 
 .field {
 	margin-bottom: 2em;
+}
+
+.hero-unit {
+  padding: 30px;
+}
+
+.hero-unit h1 {
+	font-size: 40px;
+	line-height: 1.2em;
+}
+
+.hero-unit li {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+  color: inherit;
+}
+
+.hero-unit ul {
+	margin-bottom: 1.5em;
+}
+
+p.hint, .hero-unit p.hint {
+	margin: 0;
+	text-size: 11px;
+	font-weight: normal;
+	line-height: 1em;
 }
