Add better explanation to demo homepage

--- a/app/views/cats/_cats.html.erb
+++ b/app/views/cats/_cats.html.erb
@@ -1,8 +1,14 @@
+<ul class="thumbnails">
   <% cats.each do |cat| %>
-    <%= link_to cat do %>
-      <%= image_tag(cat.image_url, :style=>'width: 50px;') %>
-    <% end %>
+  	<li class="span2">
+  		<div class="thumbnail">
+    		<%= link_to cat do %>
+      		<%= image_tag(cat.image_url) %>
+    		<% end %>
+    	</div>
+    </li>
   <% end %>
   <% if cats.empty? %>
-    <p>None.</p>
+    <li class="span9">None</li>
   <% end %>
+</ul>
