--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,18 +1,30 @@
-<h2>Approved cats</h2>
-<div>
-  <% @cats.finished.each do |cat| %>
-    <%= link_to cat do %>
-      <%= image_tag(cat.cropped_image_url, :style=>'height: 50px;') %>
-    <% end %>
-  <% end %>
+<div class="hero-unit">
+  <h1>What is this?</h1>
+  <p>This demo gives you a good idea of the kind of human powered tasks you can complete to Shared Workforce. Imagine you have lots of user generated photos of cats. You want to take those photos and:</p>
+  <ul>
+  	<li>Check whether it's a cat</li>
+  	<li>Improve the description</li>
+  	<li>Tag the cat (e.g. soft, fluffy etc.)</li>
+  	<li>Rotate the photo</li>
+  	<li>Crop the cats eye</li>
+  </ul>
+  <p>Remember, there is a real team of people powering these tasks. Why not try it now:</p>
+  <p><%= link_to "Add a new cat +", new_cat_path, :class => 'btn btn-primary btn-large' %> or <%= link_to 'Get the source code', 'https://github.com/sharedworkforce/sharedworkforce-demo-rails' %></p>
 </div>
 
-<h2>Pending cats</h2>
-<div>
-  <%= render :partial=>'cats', :locals=>{:cats=>@cats.pending} %>
-</div>
+<% unless @cats.finished.empty? %>
+	<h2>Approved cats</h2>
+	<%= render :partial=>'cats', :locals=>{:cats=>@cats.finished} %>
+<% end %>
+	
+<% unless @cats.pending.empty? %>
+	<h2>Pending cats</h2>
+	<%= render :partial=>'cats', :locals=>{:cats=>@cats.pending} %>
+<% end %>
+	
+<% unless @cats.rejected.empty? %>
+	<h2>Rejected cats</h2>
+	<%= render :partial=>'cats', :locals=>{:cats=>@cats.rejected} %>
+<% end %>
 
-<h2>Rejected cats</h2>
-<div>
-  <%= render :partial=>'cats', :locals=>{:cats=>@cats.rejected} %>
-</div>
+
