--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @cat, :html => { :multipart => true } do |f| %>
   <% if @cat.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-error">
       <h2><%= pluralize(@cat.errors.count, "error") %> prohibited this cat from being saved:</h2>
 
       <ul>
@@ -11,27 +11,37 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :image_url, "Find the URL of a cat photo and paste it here." %> (Or <a id="random-cat" href="#">get a random one</a>)<br />
-    <%= f.text_field :image_url, :size=>60 %>
-
+<ol>
+  <li>
+    <div class="field">
+      <%= f.label :image_url, '<strong><a id="random-cat" href="#">Get a random cat</a></strong> or paste the URL of a cat photo below'.html_safe %>
       <div>
-        <img style="width: 120px" id="chosen-image" />
+        <%= f.text_field :image_url, :style=>"width:80%; min-width:240px;" %>
       </div>
-  </div>
+      <div style="width:50%">
+          <img style="max-height:200px;" id="chosen-image" />
+      </div>
+    </div>
+  </li>
 
-  <div class="field">
-    <%= f.label :description, "Roughly describe a cat in a few words (e.g. four legs, tail, fluffy)" %>
-    <%= f.text_area :description, :rows=>3 %>
-  </div>
+  <li>
+    <div class="field">
+      <%= f.label :description, "<strong>Describe the cat</strong> in a few words (e.g. The fluffy cat is relaxing on the mat)".html_safe %>
+      <%= f.text_area :description, :rows=>2, :style=>"width:80%; min-width:240px;" %>
+    </div>
+  </li>
 
-  <div class="field">
-    <%= f.label :notification_email, "Email address: (optional, it will take a few minutes for your cat to be processed. If you would like an email summary when it's complete, enter your email.)" %>
-    <%= f.text_field :notification_email %>
-  </div>
+  <li>
+    <div class="field">
+      <%= f.label :notification_email, "<strong>Email address</strong> (optional)".html_safe %>
+      <%= f.text_field :notification_email, :style=>"width:80%; min-width:240px;" %>
+      <p class="hint">It will take a few minutes for your cat to be processed.<br /> If you would like an email summary when it's complete, enter your email.</small></p>
+    </div>
+  </li>
+</ol>
 
   <div class="actions">
-    <%= f.submit :class => "btn" %>
+    <%= f.submit :class => "btn btn-primary" %> or <%= link_to 'Cancel', cats_path %>
   </div>
 <% end %>
 
