--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New cat</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', cats_path %>
+<div class="hero-unit">
+	<h1 style="margin-bottom:0.5em;">Add a new cat</h1>
+	<%= render 'form' %>
+</div>
