Add individual views for approved, pending and rejected cats

--- a/app/assets/stylesheets/twitter/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/twitter/bootstrap_and_overrides.css.less
@@ -64,3 +64,14 @@ p.hint, .hero-unit p.hint {
 	font-weight: normal;
 	line-height: 1em;
 }
+
+h1.hr, h2.hr, h3.hr, h4.hr, h5.hr, h6.hr {
+	border-bottom: 3px solid #eee;
+	margin-bottom: 0.5em;
+	line-height: 1.3em;
+}
+
+span.see-all {
+	float: right;
+	font-size: 75%;
+}
