--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -14,17 +14,17 @@
 
 <% unless @cats.finished.empty? %>
 	<h2 class="hr">Approved cats <span class="see-all"><%= link_to '(see all)', approved_cats_path %></span></h2>
-	<%= render :partial=>'cats', :locals=>{:cats=>@cats.finished.limit(8)} %>
+	<%= render :partial=>'cats', :locals=>{:cats=>@cats.finished.limit(4)} %>
 <% end %>
 	
 <% unless @cats.pending.empty? %>
-	<h2>Pending cats <span class="see-all"><%= link_to '(see all)', pending_cats_path %></span></h2>
-	<%= render :partial=>'cats', :locals=>{:cats=>@cats.pending.limit(8)} %>
+	<h2 class="hr">Pending cats <span class="see-all"><%= link_to '(see all)', pending_cats_path %></span></h2>
+	<%= render :partial=>'cats', :locals=>{:cats=>@cats.pending.limit(4)} %>
 <% end %>
 	
 <% unless @cats.rejected.empty? %>
-	<h2>Rejected cats <span class="see-all"><%= link_to '(see all)', rejected_cats_path %></span></h2>
-	<%= render :partial=>'cats', :locals=>{:cats=>@cats.rejected.limit(8)} %>
+	<h2 class="hr">Rejected cats <span class="see-all"><%= link_to '(see all)', rejected_cats_path %></span></h2>
+	<%= render :partial=>'cats', :locals=>{:cats=>@cats.rejected.limit(4)} %>
 <% end %>
 
 
