Change app name to Catisfy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shared Workforce Demo - Upsidedown Cats Eyes</title>
+  <title>Shared Workforce Demo - Catsify</title>
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
@@ -15,7 +15,7 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <a class="brand" href="/">Upside down cat eyes - Shared Workforce Demo</a>
+      <a class="brand" href="/">Catsify - Shared Workforce Demo</a>
       <div class="nav-collapse" style="float:right;">
         <ul class="nav">
           <li><%= link_to 'www.sharedworkforce.com', 'http://www.sharedworkforce.com' %></li>
