Add counts and back to home link

--- a/app/views/cats/new.html.erb
+++ b/app/views/cats/new.html.erb
@@ -1,3 +1,6 @@
+<div class="back">
+	<%= link_to '← Back to home', root_path %>
+</div>
 <div class="hero-unit">
 	<h1 style="margin-bottom:0.5em;">Add a new cat</h1>
 	<%= render 'form' %>
