--- a/app/views/cats/rejected.html.erb
+++ b/app/views/cats/rejected.html.erb
@@ -1,7 +1,10 @@
+<div class="back">
+	<%= link_to '← Back to home', root_path %>
+</div>
 <% unless @cats.rejected.empty? %>
 	<h1 class="hr">Rejected cats</h1>
+	<p>Hmm, I wonder why these photos didn't make it past our moderation team. Click on a photo to find out.</p>
 	<%= render :partial=>'cats', :locals=>{:cats=>@cats.rejected} %>
 <% else %>
   <h1 class="hr">No rejected cats</h1>
-  <p><%= link_to '← Back', :back, :class => 'btn'  %></p>
 <% end %>
