--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -13,17 +13,17 @@
 </div>
 
 <% unless @cats.finished.empty? %>
-	<h2 class="hr">Latest approved cats <span class="see-all"><%= link_to '(see all)', approved_cats_path %></span></h2>
+	<h2 class="hr">Latest approved cats <span class="see-all"><%= link_to "See all #{@cats.finished.count.to_s} →", approved_cats_path %></span></h2>
 	<%= render :partial=>'cats', :locals=>{:cats=>@cats.finished.limit(4)} %>
 <% end %>
 	
 <% unless @cats.pending.empty? %>
-	<h2 class="hr">Pending cats <span class="see-all"><%= link_to '(see all)', pending_cats_path %></span></h2>
+	<h2 class="hr">Pending cats <span class="see-all"><%= link_to "See all #{@cats.pending.count.to_s} →", pending_cats_path %></span></h2>
 	<%= render :partial=>'cats', :locals=>{:cats=>@cats.pending.limit(4)} %>
 <% end %>
 	
 <% unless @cats.rejected.empty? %>
-	<h2 class="hr">Latest rejected cats <span class="see-all"><%= link_to '(see all)', rejected_cats_path %></span></h2>
+	<h2 class="hr">Latest rejected cats <span class="see-all"><%= link_to "See all {@cats.rejected.count.to_s} →", rejected_cats_path %></span></h2>
 	<%= render :partial=>'cats', :locals=>{:cats=>@cats.rejected.limit(4)} %>
 <% end %>
 
