Improve layout of show cats page

--- a/app/assets/stylesheets/twitter/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/twitter/bootstrap_and_overrides.css.less
@@ -60,9 +60,16 @@ body {
 
 p.hint, .hero-unit p.hint {
 	margin: 0;
-	text-size: 11px;
+	text-size: 12px;
 	font-weight: normal;
 	line-height: 1em;
+}
+
+.hero-unit label {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+  color: inherit;
 }
 
 h1.hr, h2.hr, h3.hr, h4.hr, h5.hr, h6.hr {
