--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -16,7 +16,7 @@
     <div class="field">
       <%= f.label :image_url, '<strong><a id="random-cat" href="#">Get a random cat</a></strong> or paste the URL of a cat photo below'.html_safe %>
       <div>
-        <%= f.text_field :image_url, :style=>"width:80%; min-width:240px;" %>
+        <%= f.text_field :image_url, :style=>"width:90%;" %>
       </div>
       <div style="width:50%">
           <img style="max-height:200px;" id="chosen-image" />
@@ -27,14 +27,14 @@
   <li>
     <div class="field">
       <%= f.label :description, "<strong>Describe the cat</strong> in a few words (e.g. The fluffy cat is relaxing on the mat)".html_safe %>
-      <%= f.text_area :description, :rows=>2, :style=>"width:80%; min-width:240px;" %>
+      <%= f.text_area :description, :rows=>2, :style=>"width:90%;" %>
     </div>
   </li>
 
   <li>
     <div class="field">
       <%= f.label :notification_email, "<strong>Email address</strong> (optional)".html_safe %>
-      <%= f.text_field :notification_email, :style=>"width:80%; min-width:240px;" %>
+      <%= f.text_field :notification_email, :style=>"width:90%;" %>
       <p class="hint">It will take a few minutes for your cat to be processed.<br /> If you would like an email summary when it's complete, enter your email.</small></p>
     </div>
   </li>
