--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -8,7 +8,7 @@
   	<li>Rotate the photo</li>
   	<li>Crop the cats eye</li>
   </ul>
-  <p>With Shared Workforce you can outsource tasks like through our API. We have a team of people completing tasks in near real time. Why not try it now:</p>
+  <p>With Shared Workforce you can outsource tasks like this through our API. We have a team of people completing tasks in near real time. Why not try it now:</p>
   <p><%= link_to "Add a new cat +", new_cat_path, :class => 'btn btn-primary btn-large' %> or <%= link_to 'Get the source code from github', 'https://github.com/sharedworkforce/sharedworkforce-demo-rails' %></p>
 </div>
 
