--- a/app/views/cats/pending.html.erb
+++ b/app/views/cats/pending.html.erb
@@ -2,7 +2,7 @@
 	<%= link_to '← Back to home', root_path %>
 </div>
 <% unless @cats.pending.empty? %>
-	<h1 class="hr"><%= @cats.pending.count.to_s %> cats waiting to be approved</h1>
+	<h1 class="hr"><%= pluralize(@cats.pending.count.to_s, 'cat') %> waiting to be approved</h1>
 	<%= render :partial=>'cats', :locals=>{:cats=>@cats.pending} %>
 <% else %>
   <h1 class="hr">No cats are waiting...</h1>
