Give less specific example for description

--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -26,7 +26,7 @@
 
   <li>
     <div class="field">
-      <%= f.label :description, "<strong>Describe the cat</strong> in a few words (e.g. The fluffy cat is relaxing on the mat)".html_safe %>
+      <%= f.label :description, "<strong>Describe the cat</strong> in a few words (e.g. fluffy, relaxing)".html_safe %>
       <%= f.text_area :description, :rows=>2, :style=>"width:90%;" %>
     </div>
   </li>
