--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -6,7 +6,7 @@
   	<li>Improve the description</li>
   	<li>Tag the cat (e.g. soft, fluffy etc.)</li>
   	<li>Rotate the photo so that the eyes are upside-down</li>
-  	<li>Crop the cats eye's</li>
+  	<li>Crop the cat's eyes</li>
   </ul>
   <p>With Shared Workforce, you can outsource tasks like these through <%= link_to 'our API', 'http://www.sharedworkforce.com/docs' %>. We have a team of people completing tasks in near real time. Why not try it now:</p>
   <p><%= link_to "Add a new cat +", new_cat_path, :class => 'btn btn-primary btn-large' %> or <%= link_to 'Get the source code from github', 'https://github.com/sharedworkforce/sharedworkforce-demo-rails' %></p>
