--- a/app/views/cat_mailer/summary_email.html
+++ b/app/views/cat_mailer/summary_email.html
@@ -2,61 +2,137 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
+    <style type="text/css">
+
+      body {
+        padding: 0;
+        margin: 20px 10px;
+        background: #000;
+        font-size: 14px;
+        font-family: "Lucida Grande";
+        line-height: 1.6em;
+      }
+
+      .wrapper {
+        width: 840px;
+        padding: 10px;
+        background: #333;
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+      }
+
+      .container {
+        width: 820px;
+        background: #ffffff;
+        padding: 10px;
+      }
+
+      .header {
+        background: #333;
+        width: 830px;
+        margin: 0;
+        padding: 5px 5px 15px;
+      }
+
+      table, tr {
+        padding: 0;
+        margin: 0;
+      }
+
+      td {
+        padding: 5px;
+      }
+    
+    </style>
   </head>
   <body>
+
+  <div class="wrapper">
+
+  <div class="header">
+    <a href="http://www.sharedworkforce.com"><img src="http://www.sharedworkforce.com/images/web_address.png" alt="Shared Workforce"/></a>
+  </div>
+
+  <div class="container">
     <h1>Good news!</h1>
 
-    <p>Your cat has been processed.</p>
+    <p>Your cat has been processed by our team.</p>
 
-    <p>
-      <b>Original description:</b>
-      <%= @cat.description %>
-    </p>
-
-    <% unless @cat.rejected? %>
-      <p>
-        <b>Improved description:</b>
-        <%= @cat.improved_description %>
-      </p>
-    <% end %>
-
-    <p>
-      <b>Tags:</b>
-      <%= @cat.tags %>
-    </p>
-
-    <p>
-      <b>Photo:</b><br />
-      <%= image_tag @cat.image_url if @cat.image_url %>
-    </p>
-
-    <% unless @cat.rejected? %>
-      <p>
-        <b>Upside down photo</b><br />
-        <% if @cat.rotated_image_url %>
-          <%= image_tag @cat.rotated_image_url %>
+    <table cellpadding="0" cellspacing="0" width="100%">
+      <tr>
+        <td style="width:50%">
+          <p><strong>Original Photo</strong><br />
+            <%= link_to(image_tag(@cat.image_url, :style => "width:400px"), @cat) if @cat.image_url %>
+          </p>
+        </td>
+        <% unless @cat.rejected? %>
+          <td style="width:50%">
+            <p><strong>Upside-down Photo</strong><br />
+              <% if @cat.rotated_image_url %>
+                <%= link_to(image_tag(@cat.rotated_image_url, :style => "width:400px"), @cat) %>
+              <% end %>
+            </p>
+          </td>
+        </tr>
+      <% else %>
+        </tr>
+      <% end %>
+      <tr>
+        <td>
+          <p><strong>Original description</strong><br />
+            <%= @cat.description %>
+          </p>
+        </td>
+        <% unless @cat.rejected? %>
+          <td>
+            <p><strong>Improved description:</strong><br />
+              <%= @cat.improved_description %>
+            </p>
+          </td>
         <% end %>
-      </p>
-
-      <p>
-        <b>Cropped photo</b><br />
-        <% if @cat.cropped_image_url %>
-          <%= image_tag @cat.cropped_image_url %>
+      </tr>
+      <tr>
+        <td><strong>Tags:</strong><br />
+          <%= @cat.tags %></p>
+        </td>
+        <% unless @cat.rejected? %>
+          <td style="width:50%">
+            <p><strong>Cropped photo</strong><br />
+              <% if @cat.cropped_image_url %>
+                <%= image_tag @cat.cropped_image_url %>
+              <% end %>
+            </p>
+          </td>
+        <% else %>
+          <td></td>
         <% end %>
-      </p>
-    <% end %>
+      </tr>
+    </table>
 
-    <h2>Log</h2>
+    <table cellpadding="0" cellspacing="0" width="100%" style="background-color:#eeeeee; font-size:11px; padding:15px">
+      <tr>
+        <td>
+          <h2>Log</h2>
+          <ul>
+            <li>Cat created at <%= @cat.created_at.to_s(:short) %></li>
+            <% @cat.audits.each do |a| %>
+              <li><%= distance_of_time_in_words(a.created_at, a.cat.created_at) %> later: <%= a.comment %></li>
+            <% end %>
+          </ul>
+        </td>
+      </tr>
+    </table>
 
-    <p>Cat created at <%= @cat.created_at.to_s(:short) %>
-      <ol>
-        <% @cat.audits.each do |a| %>
-          <li><%= distance_of_time_in_words(a.created_at, a.cat.created_at) %> later: <%= a.comment %></li>
-        <% end %>
-      </ol>
+    <p>If you enjoyed it, you can try again at <a href="http://catsify.herokuapp.com/cats/new">catsify.herokuapp.com</a>. If this all seems pointless, check out <a href="http://www.sharedworkforce.com">sharedworkforce.com</a> for more information on how this can be useful.</p>
+
+    <p>Thanks!<br />
+      <strong>The <a href="http://www.sharedworkforce.com">Shared Workforce</a> Team</strong>
     </p>
 
-    <p>If you enjoyed it, you can try again at <a href="http://catsify.herokuapp.com">catsify.herokuapp.com</a>. If this all seems pointless, check out <a href="http://www.sharedworkforce.com">sharedworkforce.com</a> for more information on how this can be useful.</p>
+  </div><!-- .container -->
 
-  </body>
+</div><!-- .wrapper -->
+
+</body>
 </html>
