Make email address mandatory

--- a/app/views/cats/_form.html.erb
+++ b/app/views/cats/_form.html.erb
@@ -33,9 +33,9 @@
 
   <li>
     <div class="field">
-      <%= f.label :notification_email, "<strong>Email address</strong> (optional)".html_safe %>
+      <%= f.label :notification_email, "<strong>Email address</strong>".html_safe %>
       <%= f.text_field :notification_email, :style=>"width:90%;" %>
-      <p class="hint">It will take a few minutes for your cat to be processed.<br /> If you would like an email summary when it's complete, enter your email.</small></p>
+      <p class="hint">It will take a few minutes for your cat to be processed.<br /> Please enter your email and we'll send you an email summary when it's complete. We'll only use your email for this purpose.</small></p>
     </div>
   </li>
 </ol>
