Improve wording in intro text

--- a/app/views/cats/index.html.erb
+++ b/app/views/cats/index.html.erb
@@ -1,6 +1,7 @@
 <div class="hero-unit">
   <h1>What is this?</h1>
-  <p>This demo gives you a good idea of the kind of human powered tasks you can complete with Shared Workforce. Imagine you have lots of user generated photos of cats. With each photo you would like to:</p>
+  <p>This is a live sandbox, which demonstrates some of the human powered tasks you can complete with <%= link_to 'Shared Workforce', 'http://www.sharedworkforce.com' %>. Simply by adding a few lines of code to your app, you can send text or images to be checked by our human workers. Their responses will be returned to your app where you can define actions to perform.</p>
+  <p>In this example we have lots of user-generated photos of cats. Our workers will:</p>
   <ul>
   	<li>Check whether it's a cat</li>
   	<li>Improve the description</li>
